corrected first post

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,8 +1,8 @@
 
-title = "I'm Gil Morim"
+title = "gilmorim.dev"
 author = "Gil Morim"
 #copyright = "2020-2021"
-description = "Gil Morim"
+description = "notes and personal reflections"
 profilePicture = "images/profile.jpg"
 keywords = ""
 favicon = "favicons/"
