--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.121.0'
-          # extended: true
+          hugo-version: latest
+          extended: true
       
       - name: Build
         run: hugo --minify
