Added new posts from working effectively on legacy code
Added new posts from working effectively on legacy code

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,7 +2,7 @@
 title = "gilmorim.dev"
 author = "Gil Morim"
 #copyright = "2020-2021"
-description = "notes and personal reflections"
+description = "study notes"
 profilePicture = "images/profile.jpg"
 keywords = ""
 favicon = "favicons/"
